crates/wdl-grammar/tests/parsing/unterminated-metadata-string/source.errors
error: expected `}`, but found end of input
  ┌─ tests/parsing/unterminated-metadata-string/source.wdl:5:11
  │
5 │ task test {
  │           ^ unclosed delimiter
6 │     meta {
  │          - unclosed delimiter

error: an unterminated string was encountered
  ┌─ tests/parsing/unterminated-metadata-string/source.wdl:8:12
  │
8 │         a: 'unterminated
  │            ^ this quote is not matched

